# website

./: Cargo.toml  README.md  package-lock.json  todo.md
posts/: real_post.md  test.md
src/: main.rs  md_parser.rs  post.rs  server.rs  templates.rs
src/server/: handler.rs  router.rs
src/util/: path.rs
src/website/: templates.rs
static/: post.md
