[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]
comrak = { version = "0.36.0" }
tiny_http = { version = "0.12.0" }
uuid = { version = "1.3.0", features = ["v4"] }
maud = { version = "0.27.0" }
once_cell = { version = "1.17.1" }
simple_logger = { version = "5.0.0" }
log = { version = "0.4.19" }
pollster = { version = "0.4.0" }